# rusty-feather

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.cargo/: config
src/: command_processor.rs  console.rs  fmt_fix.rs  i2c.rs  main.rs  neopixel.rs  panic_led_halt.rs  parser.rs  scd41.rs  usb_writer.rs  ws2812.rs
